[package]
name = "rustlite-scan"
version = "0.2.0"
edition = "2021"

[dependencies]

bson = { version = "2.7"}

byteorder = "1.5"
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# CIDR expansion
cidr = "0.3.1"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio-openssl = "0.6"
webpki-roots = "0.22"
x509-parser = "0.15"
# Futures utilities
futures = "0.3"
md-5 = "0.10.6"
# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# Progress bar
indicatif = "0.17"

# Optional: colored output for friendlier CLI
colored = "2.1"
csv = "1.2"
bytes ="1.11"
trust-dns-proto = "0.23"

chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
once_cell = "1.20"
tempfile = "3.6"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
[dev-dependencies]
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "time", "test-util"] }
hyper = { version = "0.14", features = ["full"] }
rcgen = "0.9"
rustls = "0.21"
tokio-rustls = "0.23"
[features]
# test_helpers exposes small helpers used only by tests
test_helpers = []

